# routine-tracker

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  brainstorm.md  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
docker/: docker-compose.dev.yaml
docker/django/: Dockerfile  docker-entrypoint.sh
docker/nginx/: nginx.conf
docs/: makefile.md  routine-tracker-erd.pgerd  translation.md
routine_tracker/: manage.py
routine_tracker/accounts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
routine_tracker/accounts/components/profilenav/: profilenav.html  profilenav.py
routine_tracker/accounts/components/userdropdown/: userdropdown.html  userdropdown.py
routine_tracker/accounts/migrations/: 0001_initial.py  0002_userprofile.py  0003_remove_user_username_alter_user_email_and_more.py  0004_alter_user_managers.py  0005_alter_userprofile_time_zone.py
routine_tracker/accounts/templates/accounts/: auth.html  form.html  profile.html
routine_tracker/base/: apps.py  middleware.py  mixins.py  urls.py  views.py
routine_tracker/base/components/dashboard/: dashboard.py  template.html
routine_tracker/base/templates/: _base.html
routine_tracker/base/templatetags/: form.py  messages.py  modal.py  strutils.py
routine_tracker/base/utils/: common.py  htmx.py  modal.py  nav.py
routine_tracker/core/: apps.py  mixins.py  tasks.py
routine_tracker/core/templatetags/: chart.py  form.py  modal.py
routine_tracker/core/tests/: test_collections.py  test_misc.py  test_settings.py
routine_tracker/core/utils/: __init__.py  chart.py  collections.py  components.py  date.py  misc.py  settings.py
routine_tracker/project/: celery.py  settings.py  urls.py  wsgi.py
routine_tracker/project/settings/: __init__.py  base.py  celery.py  custom.py  deployment.py  env.py  locale.py  logging.py  push.py
routine_tracker/routines/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
routine_tracker/routines/migrations/: 0001_initial.py  0002_alter_routine_options_alter_routineentry_options_and_more.py  0003_alter_routine_measure.py  0004_routine_description_rendered_and_more.py
routine_tracker/routines/templatetags/: routine_extras.py
routine_tracker/routines/utils/: chart.py  export.py  statistics.py
routine_tracker/routines/views/: __init__.py  entry.py  group.py  routine.py
routine_tracker/static/css/: styles.css
routine_tracker/static/js/: common.js  modal.js  toast.js
(+93 files in other folders)
